overflow solved

--- a/css/style.scss
+++ b/css/style.scss
@@ -40,6 +40,7 @@ body {
     height: 80px;
     color: white;
     background: black;
+    overflow: hidden;
 
     h2 {
 
@@ -86,7 +87,7 @@ body {
             grid-template-columns: repeat(3, 1fr);
             text-align: center;
             grid-gap: 5px;
-            display: grid;
+            display: none;
 
             .num {
 
